# Sacrilege_Engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.json  mainproject.md  mcp_config.json  pyproject.toml  test.txt
.github/workflows/: build-windows.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  FRONTEND_WIREFRAMES.md  INTELLIGENCE_MODULES.md  MCP_INTEGRATION.md  MVP_ROADMAP.md  PARSING_PIPELINE.md  PRESENTATION.md  TECHNICAL_PAPER.md  main_report.txt  presentation.tex
radar/: index.html  radar_replayer.py
src/: __init__.py  analysis_orchestrator.py  cli.py  config.py  mcp_server.py  models.py
src/api/: __init__.py  main.py
src/intelligence/: __init__.py  base.py  cheat_patterns.py  crosshair_discipline.py  death_analyzer.py  llm_client.py  peek_iq.py  rotation_iq.py  round_simulator.py  tilt_detector.py  trade_discipline.py  utility_intelligence.py
src/output/: __init__.py  feedback_generator.py
src/parser/: __init__.py  demo_parser.py  event_extractor.py  player_tracker.py  validator.py
src/visualization/: decision_graph.py  heatmap.py  team_synergy.py  timeline.py
src/world/: __init__.py  map_geometry.py  visibility.py
tests/: test_death_analyzer.py  test_death_analyzer.py.bak  test_death_analyzer_extended.py  test_event_extractor.py  test_integration.py  test_integration.py.bak  test_intelligence_modules.py  test_models.py
