[project]
name = "sacrilege-engine"
version = "1.0.0"
description = "CS2 Demo Intelligence System - Death Analysis & Blame Attribution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LicenseRef-Sacrilege-EULA"}
authors = [
    {name = "Pl4yer-ONE", email = "mahadevan.rajeev27@gmail.com"}
]

dependencies = [
    "demoparser2>=0.25.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pygame>=2.5.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "radar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
